@@ -1,2 +1,5 @@
-if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded tar 0.1 [list source [file join $dir tar.tcl]]
+if {![package vsatisfies [package provide Tcl] 8.2]} {
+    # PRAGMA: returnok
+    return
+}
+package ifneeded tar 0.2 [list source [file join $dir tar.tcl]]
